Thu Dec 17 13:12:00 UTC 2009  Martin Corino  <mcorino@remedy.nl>

        * tao/Leader_Follower.h:
        * tao/Leader_Follower.inl:
          Added method set_new_leader_generator().
          This resolves Bugzilla #3772.

Thu Dec 17 13:03:32 UTC 2009  Denis Budko  <denis.budko@remedy.nl>

        * interop-tests/wchar/run_test.pl:

          Test is converted to use new test framework
          and added to fuzz build.

Thu Dec 17 12:42:58 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/RTCORBA/Dynamic_Thread_Pool/run_test.pl:
          Fix fuzz

Thu Dec 17 11:45:30 UTC 2009  Denis Budko  <denis.budko@remedy.nl>

        * orbsvcs/tests/InterfaceRepo/IDL_Test/run_test.pl:
        * tests/Bug_3479_Regression/run_test.pl:
        * tests/TransportCurrent/IIOP/run_test.pl:
        * tests/TransportCurrent/Framework/run_test.pl:
        * tests/Client_Leaks/run_test.pl:
        * tests/ZIOP/run_test.pl:
        * tests/RTCORBA/Bug_3382_Regression/run_test.pl:

          Tests are converted to use new test framework
          and added to fuzz build.

Thu Dec 17 10:22:00 UTC 2009  Martin Corino  <mcorino@remedy.nl>

        * tao/GIOP_Message_Base.cpp:
          Fixed missing request id in logging of LocateRequest/LocateReply &
          CancelRequest.
          This fixed Bugzilla #2898.

Thu Dec 17 09:52:52 UTC 2009  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * tests/Bug_3790_Regression/simple_test.idl:
        * tests/Bug_3790_Regression/simple_test_i.cpp:
        * tests/Bug_3790_Regression/simple_test_i.h:
        * tests/Bug_3790_Regression/server.cpp:
        * tests/Bug_3790_Regression/server2.cpp:
        * tests/Bug_3790_Regression/run_test.pl:
        * tests/Bug_3790_Regression/README:
        * tests/Bug_3790_Regression/Bug_3790_Regression.mpc:
        * bin/tao_orb_tests.lst:
          Added a test for bug#3790 and scheduled it for run as not fixed.

Wed Dec 16 19:22:58 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>