@@ -1,3 +1,8 @@
+Fri Dec 18 09:23:37 UTC 2009  Vladimir Zykov  <vladimir.zykov@prismtech.com>
+
+        * tests/Bug_3790_Regression/server2.cpp:
+          Simplified the test.
+
 Thu Dec 17 13:12:00 UTC 2009  Martin Corino  <mcorino@remedy.nl>
 
         * tao/Leader_Follower.h:
